Fixed janky bottom popup positioning on iOS

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -25,7 +25,7 @@
       @include hairline-border(top, $dark-color)
       @include hairline-border(right, $dark-color)
       box-shadow: 0 0.6em 1.2em rgba(0, 0, 0, 0.333)
-      top: 100%
+      bottom: 0
       padding: 1.2em 1.8em
       border-top-right-radius: 0.6em
       z-index: 200
